# web_hw_08

./: models.py  pyproject.toml
ex_1/: fill_mongo.py  models.py  querys.py
ex_2/: consumer_sms_email.py  example.env  models.py  producer.py  queue_.py
