[tool.poetry]
name = "web-hw-08"
version = "0.1.0"
description = ""
authors = ["PYOrm <ormagedon2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.28.2"
pymongo = {extras = ["srv"], version = "^4.7.3"}
redis = "^5.0.7"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
